--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -112,7 +112,8 @@ mark {
   }
 
   .editor-title {
-    font-size: 1.5rem;
+    font-size: 2rem;
+    font-family: $secondaryFont, cursive;
   }
   .editor-creator {
     font-size: 0.8rem;
