--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -220,3 +220,12 @@ mark {
     }
   }
 }
+
+@media (max-width: 500px) {
+  .container {
+    padding: 1rem;
+  }
+  .my-button {
+    position: static;
+  }
+}
