--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -229,4 +229,10 @@ mark {
     margin-top: 50px;
     position: static;
   }
+
+  .main-article-wrapper {
+    h1 {
+      font-size: 1.5rem;
+    }
+  }
 }
